--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env FIREBASE_AUTH_EMULATOR_HOST=localhost:9099 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -13,6 +13,7 @@
     "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
+    "cross-env": "^7.0.3",
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
     "nuxt": "^2.15.8",
