Add:QRコード読み取り、販売数制限

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ sw.*
 /assets/firebase-auth-sw.js
 /assets/tanomeal-firebase-adminsdk-yn7ab-d8a4eec65c.json
 /static/firebase-auth-sw.js
+/tanomeal-firebase-adminsdk-yn7ab-30a957c950.json
