--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/pwa": "^3.3.5",
+    "@paypayopa/paypayopa-sdk-node": "^2.1.0",
     "core-js": "^3.19.3",
     "cross-env": "^7.0.3",
+    "express": "^4.18.1",
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-qrcode-reader": "^3.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
